# cppReflection

./: CMakeLists.txt  README.md  Reflection.h
examples/: CMakeLists.txt  EnumExample.cpp  MethodExample.cpp  PropertyExample.cpp  PropertyOOPExample.cpp
include/Interface/: IReflectionable.h
include/Types/: Base.h  BaseList.h  Constructor.h  ConstructorList.h  Destructor.h  Enum.h  EnumList.h  Field.h  FieldList.h  MemberInfo.h  Method.h  MethodList.h  Object.h  Property.h  PropertyList.h  Type.h  Type2String.h  TypeFactory.h  traits.h
src/: CMakeLists.txt
src/Interface/: IReflectionable.cpp
src/Type/: MemberInfo.cpp  Object.cpp  TypeFactory.cpp
test/: CMakeLists.txt  EnumTest.cpp  MethodTest.cc  MethodTest1.cpp  PropertyTest.cc  PropertyTest.cpp  PropertyTestOOP.cpp
